--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,36 +4,44 @@
 <meta charset="UTF-8">
 <title>Login Page</title>
 <link rel="stylesheet" th:href="@{/css/styleLogin.css}" />
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body onload='document.loginForm.username.focus();'>
-	<h1>Spring Security Custom Login Form (Annotation)</h1>
+<body>
+<!--    Header-->
+<div class="flex bg-purple-500 justify-between align-middle width-screen sticky top-0 z-50">
+    <div></div>
+    <div class="py-5 pl-5">
+    </div>
+    <div></div>
+</div>
+<form action="#" method="post" th:action="@{/login}" class="flex justify-between">
+    <div></div>
+    <div class="flex flex-col rounded-md border-solid border-purple-500 bg-white drop-shadow-md border-2 p-4 m-4 ">
 
-	<div id="login-box">
+        <span class="block text-center text-4xl py-4">Welcome</span>
+        <input class="w-64 px-4 py-2 rounded-md drop-shadow-md focus:outline-purple-500 mb-2" name='username' placeholder="Username" type='text'
+               value=''>
+        <input class="w-64 px-4 py-2 rounded-md drop-shadow-md focus:outline-purple-500 mb-8" name='password' placeholder="Password"
+               type='password'/>
 
-		<h3>Login with Username and Password</h3>
-		<div th:if="${error}" class="error" th:text="${error}"></div>
+        <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
+        <div th:if="${msg}" class="alert alert-success" th:text="${msg}"></div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <button class="w-64 px-4 py-2 bg-purple-500 rounded-md focus:outline-none focus:bg-purple-400 hover:bg-purple-400 text-white font-bold drop-shadow-md" name="submit"
+                type="submit">Login
+        </button>
+    </div>
+    <div></div>
 
-		<div th:if="${msg}" class="msg" th:text="${msg}"></div>
 
-		<form th:action="@{/login}" method="post">
-			<table>
-				<tr>
-					<td>User:</td>
-					<td><input type='text' name='username' value=''></td>
-				</tr>
-				<tr>
-					<td>Password:</td>
-					<td><input type='password' name='password' /></td>
-				</tr>
-				<tr>
-					<td colspan='2'><button name="submit" type="submit">Login</button></td>
-				</tr>
-			</table>
 
-			<input type="hidden" name="_csrf" th:value="${_csrf.token}" />
 
-		</form>
-	</div>
+    <!--    <input type="hidden" name="_csrf" th:value="${_csrf.token}" />-->
+
+</form>
 
 </body>
 </html>
