--- a/src/main/resources/templates/wedstrijden-detail.html
+++ b/src/main/resources/templates/wedstrijden-detail.html
@@ -27,14 +27,11 @@
                 </ul>
             </div>
         </th:block>
-                <div class="mt-8">
-            <h2 class="text-lg font-bold">Je Gekochte Tickets</h2>
-            <ul>
-                
-                    <p th:text="'Aantal tickets gekocht: ' + ${tickets}"></p>
-                
-            </ul>
-        </div>
+
+        <!-- Only visible to admins -->
+    <div th:if="${isAdmin}">
+        <a th:href="@{'/wedstrijden/' + ${wedstrijd.sport.id} + '/create'}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Create Wedstrijd</a>
+    </div>
 
     </div>
 </body>
