--- a/src/main/resources/templates/wedstrijden-detail.html
+++ b/src/main/resources/templates/wedstrijden-detail.html
@@ -10,11 +10,10 @@
     <header class="text-xl font-bold text-center py-4 bg-blue-500 text-white">Wedstrijd Detail</header>
     
     <div class="container mx-auto px-4 py-2">
-        <h1 class="text-2xl font-bold" th:text="${wedstrijd.sport.naam} + ' - Overzicht'">Sportnaam - Overzicht</h1>
-        <h2 class="text-lg mt-4 mb-2" th:text="'Wedstrijden voor ' + ${wedstrijd.sport.naam}">Wedstrijden voor Sport</h2>
+        <h1 class="text-2xl font-bold" th:text="${sport.naam} + ' - Overzicht'">Sportnaam - Overzicht</h1>
+        <h2 class="text-lg mt-4 mb-2" th:text="'Wedstrijden voor ' + ${sport.naam}">Wedstrijden voor Sport</h2>
 
-        <th:block th:each="discipline : ${wedstrijd.disciplines}">
-            <h3 class="text-md mt-4 mb-2 font-semibold" th:text="${discipline}">Discipline</h3>
+        <div th:each="wedstrijd : ${wedstrijden}">
             <div class="flex flex-wrap justify-start items-center">
                 <ul class="w-full">
                     <li class="flex justify-between items-center bg-white rounded shadow px-4 py-2 my-2">
@@ -26,12 +25,12 @@
                     </li>
                 </ul>
             </div>
-        </th:block>
+        </div>
 
         <!-- Only visible to admins -->
-    <div th:if="${isAdmin}">
-        <a th:href="@{'/wedstrijden/' + ${wedstrijd.sport.id} + '/create'}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Create Wedstrijd</a>
-    </div>
+        <div th:if="${isAdmin}">
+            <a th:href="@{'/wedstrijden/' + ${sport.id} + '/create'}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Create Wedstrijd</a>
+        </div>
 
     </div>
 </body>
