--- a/src/main/resources/templates/sport.html
+++ b/src/main/resources/templates/sport.html
@@ -37,5 +37,11 @@
             }
         }
     </script>
+    
+                    <div class="mt-8">
+            <form th:action="@{/logout}" method="post">
+                <button type="submit" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Uitloggen</button>
+            </form>
+        </div>
 </body>
 </html>
