--- a/src/main/resources/templates/myTickets.html
+++ b/src/main/resources/templates/myTickets.html
@@ -11,5 +11,10 @@
             <span th:text="${ticket.wedstrijd.sport.naam + ' - ' + ticket.wedstrijd.datumTijd + ' - ' + ticket.aantal + ' tickets'}">Ticket Info</span>
         </li>
     </ul>
+                    <div class="mt-8">
+            <form th:action="@{/logout}" method="post">
+                <button type="submit" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Uitloggen</button>
+            </form>
+        </div>
 </body>
 </html>
