--- a/src/main/resources/templates/create-wedstrijd.html
+++ b/src/main/resources/templates/create-wedstrijd.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/createWedstrijdStyle.css}" />
-  
+    <title th:text="#{button.toevoegen}">Wedstrijd Toevoegen</title>
 </head>
 <body>
     <div class="form-container">
+            <div>
+            <form method="get" action="" id="languageForm">
+                <select name="lang" onchange="document.getElementById('languageForm').submit();">
+                    <option value="nl" th:selected="${#locale.language.equals('nl')}">Nederlands</option>
+                    <option value="en" th:selected="${#locale.language.equals('en')}">English</option>
+                </select>
+            </form>
+        </div>
         <h1 th:text="'Nieuwe Wedstrijd Toevoegen voor ' + ${sport.naam}">Nieuwe Wedstrijd Toevoegen</h1>
         <form th:action="@{'/wedstrijden/' + ${sport.id} + '/create'}" th:object="${wedstrijd}" method="post">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <div class="form-group">
-                <label for="datumTijd">Datum en Tijd:</label>
+                <label for="datumTijd" th:text="#{label.datumTijd}">Datum en Tijd:</label>
                 <input type="datetime-local" id="datumTijd" name="datumTijd" th:field="*{datumTijd}" required />
                 <span class="error" th:if="${#fields.hasErrors('datumTijd')}" th:errors="*{datumTijd}"></span>
             </div>
             <div class="form-group">
-                <label for="stadium">Stadium:</label>
+                <label for="stadium" th:text="#{label.stadium}">Stadium:</label>
                 <select id="stadium" name="stadium.id" th:field="*{stadium.id}" required>
                     <option value="">Kies een stadium</option>
                     <option th:each="stadium : ${stadiums}" th:value="${stadium.id}" th:text="${stadium.naam}"></option>
@@ -24,34 +32,35 @@
                 <span class="error" th:if="${#fields.hasErrors('stadium.id')}" th:errors="*{stadium.id}"></span>
             </div>
             <div class="form-group">
-                <label for="prijsPerTicket">Prijs per Ticket:</label>
-                <input type="text" id="prijsPerTicket" name="prijsPerTicket" th:field="*{prijsPerTicket}"   />
+                <label for="prijsPerTicket" th:text="#{label.prijsPerTicket}">Prijs per Ticket:</label>
+                <input type="text" id="prijsPerTicket" name="prijsPerTicket" th:field="*{prijsPerTicket}" required />
                 <span class="error" th:if="${#fields.hasErrors('prijsPerTicket')}" th:errors="*{prijsPerTicket}"></span>
             </div>
             <div class="form-group">
-                <label for="vrijePlaatsen">Aantal plaatsen:</label>
+                <label for="vrijePlaatsen" th:text="#{label.vrijePlaatsen}">Aantal plaatsen:</label>
                 <input type="number" id="vrijePlaatsen" name="vrijePlaatsen" th:field="*{vrijePlaatsen}" required />
                 <span class="error" th:if="${#fields.hasErrors('vrijePlaatsen')}" th:errors="*{vrijePlaatsen}"></span>
             </div>
             <div class="form-group">
-                <label for="olympicNumber1">Olympisch-nummer1:</label>
+                <label for="olympicNumber1" th:text="#{label.olympicNumber1}">Olympisch-nummer1:</label>
                 <input type="text" id="olympicNumber1" name="olympicNumber1" th:field="*{olympicNumber1}" required />
                 <span class="error" th:if="${#fields.hasErrors('olympicNumber1')}" th:errors="*{olympicNumber1}"></span>
             </div>
             <div class="form-group">
-                <label for="olympicNumber2">Olympisch-nummer2:</label>
+                <label for="olympicNumber2" th:text="#{label.olympicNumber2}">Olympisch-nummer2:</label>
                 <input type="text" id="olympicNumber2" name="olympicNumber2" th:field="*{olympicNumber2}" required />
                 <span class="error" th:if="${#fields.hasErrors('olympicNumber2')}" th:errors="*{olympicNumber2}"></span>
             </div>
             <div class="form-group">
-                <label for="disciplines">Disciplines:</label>
+                <label for="disciplines" th:text="#{label.disciplines}">Disciplines:</label>
                 <select id="disciplines" name="disciplines" multiple th:field="*{disciplines}" size="3" onchange="limitSelection(this)">
                     <option th:each="discipline : ${disciplines}" th:value="${discipline}" th:text="${discipline}"></option>
                 </select>
                 <span class="error" th:if="${#fields.hasErrors('disciplines')}" th:errors="*{disciplines}"></span>
             </div>
-            <button type="submit">Wedstrijd Toevoegen</button>
+            <button type="submit" th:text="#{button.toevoegen}">Wedstrijd Toevoegen</button>
         </form>
+
     </div>
 </body>
 </html>
