--- a/src/main/resources/templates/koopTicket.html
+++ b/src/main/resources/templates/koopTicket.html
@@ -2,9 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Koop Tickets</title>
+    <title th:text="#{button.buyTickets}">Koop Tickets</title>
     <link rel="stylesheet" th:href="@{/css/ticketStyle.css}" />
-     </style>
     <script>
         function updateTotalPrice() {
             var pricePerTicket = parseFloat(document.getElementById('pricePerTicket').getAttribute('value'));
@@ -16,7 +15,15 @@
 </head>
 <body>
     <div class="container">
-        <h1 th:text="'Koop tickets voor ' + ${wedstrijd.sport.naam} + ' op ' + ${formattedDate}">Koop Tickets</h1>
+            <div>
+            <form method="get" action="" id="languageForm">
+                <select name="lang" onchange="document.getElementById('languageForm').submit();">
+                    <option value="nl" th:selected="${#locale.language.equals('nl')}">Nederlands</option>
+                    <option value="en" th:selected="${#locale.language.equals('en')}">English</option>
+                </select>
+            </form>
+        </div>
+        <h1 th:text="#{button.buyTickets} + ' ' + ${wedstrijd.sport.naam} + ' on ' + ${formattedDate}">Koop Tickets</h1>
 
         <!-- Error Message Display -->
         <div th:if="${#fields.hasErrors('ticket')}" class="error-messages">
@@ -27,17 +34,17 @@
 
         <div class="ticket-info">
             <span id="pricePerTicket" th:attr="value=${wedstrijd.prijsPerTicket}">
-                Prijs per ticket: €<span th:text="${wedstrijd.prijsPerTicket}"></span>
+                <span th:text="#{label.prijsPerTicket}">Prijs per ticket</span>: €<span th:text="${wedstrijd.prijsPerTicket}">20.0</span>
             </span>
         </div>
 
         <form th:action="@{'/wedstrijden/' + ${wedstrijd.id} + '/koopTicket'}" th:object="${ticket}" method="post" class="ticket-form">
             <div class="form-group">
-                <label for="quantity">Aantal tickets:</label>
+                <label for="quantity" th:text="#{label.quantity}">Aantal tickets:</label>
                 <input type="number" id="quantity" name="aantal" min="1" max="20" value="1" required oninput="updateTotalPrice()" th:field="*{aantal}" />
                 <span class="error" th:if="${#fields.hasErrors('aantal')}" th:errors="*{aantal}"></span>
             </div>
-            <button type="submit">Koop Tickets</button>
+            <button type="submit" th:text="#{button.buyTickets}">Koop Tickets</button>
         </form>
 
         <div class="total-price">
@@ -46,9 +53,11 @@
 
         <div class="logout-button">
             <form th:action="@{/logout}" method="post">
-                <button type="submit">Uitloggen</button>
+                <button type="submit" th:text="#{button.logout}">Uitloggen</button>
             </form>
         </div>
+
+
     </div>
 </body>
 </html>
